--- a/index.html
+++ b/index.html
@@ -121,8 +121,16 @@
     </div>
   </div>
 
-  <!-- Put your file here: ./assets/lofi.mp3 -->
-  <audio id="lofi" src="assets/lofi.mp3" loop preload="auto" style="display: none;"></audio>
+  <!-- Audio: Use external URL or local file -->
+  <!-- Option 1: Use external hosted audio (recommended for GitHub Pages) -->
+  <!-- Replace with your hosted audio URL, or use a free service like: -->
+  <!-- - Upload to GitHub Releases and use raw.githubusercontent.com -->
+  <!-- - Use a free CDN like jsDelivr, or upload to a file hosting service -->
+  <audio id="lofi" loop preload="auto" style="display: none;">
+    <!-- Fallback: try external URL first, then local file -->
+    <source id="audioSource" src="" type="audio/mpeg">
+    <source src="assets/lofi.mp3" type="audio/mpeg">
+  </audio>
 
   <script src="app.js"></script>
 </body>
